# harborworks

./: .gitignore  CODEX_REPORT.md  Cargo.toml  README.md  harborworks_mvp_spec.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/seankennethdoherty/harborworks/: MainActivity.java
android/app/src/main/res/values/: styles.xml
assets/materials/: marine_aluminum_5083.json  mild_steel.json
assets/parts/: tube_beam_small.json
crates/hw_core/: Cargo.toml  README.md
crates/hw_core/src/: lib.rs
crates/hw_math/: Cargo.toml  README.md
crates/hw_math/src/: lib.rs
crates/hw_sim/: Cargo.toml  README.md
crates/hw_sim/src/: lib.rs
crates/hw_systems/: Cargo.toml  README.md
crates/hw_systems/src/: lib.rs
crates/hw_tools/: Cargo.toml  README.md
crates/hw_tools/src/: main.rs
crates/hw_vehicle/: Cargo.toml  README.md
crates/hw_vehicle/src/: lib.rs
crates/hw_vehicle_compile/: Cargo.toml  README.md
crates/hw_vehicle_compile/src/: lib.rs
docs/: android-apk.md
examples/blueprints/: starter_rescue_skiff.json
schemas/: blueprint_v1.schema.json  material_v1.schema.json  part_v1.schema.json
tools/: build-apk.sh  check.sh
