[workspace]
members = [
    "crates/hw_core",
    "crates/hw_math",
    "crates/hw_vehicle",
    "crates/hw_vehicle_compile",
    "crates/hw_sim",
    "crates/hw_systems",
    "crates/hw_tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/harborworks"

[workspace.dependencies]
anyhow = "1.0.100"
glam = { version = "0.30.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
