[package]
name = "hw_tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
hw_core = { path = "../hw_core" }
hw_sim = { path = "../hw_sim" }
hw_vehicle = { path = "../hw_vehicle" }
hw_vehicle_compile = { path = "../hw_vehicle_compile" }
serde_json.workspace = true

[[bin]]
name = "hw_tools"
path = "src/main.rs"
